--- a/network/index.html
+++ b/network/index.html
@@ -28,15 +28,15 @@
   </div>
 <div id="mainpanel">
   <div class="col">
-		<div id="maintitle"></div>
+		<!--<div id="maintitle"></div>-->
     <div id="title"></div>
     <div id="titletext"></div>
     <div class="info cf">
       <dl>
         <dt class="moreinformation"></dt>
-        <dd class="line"><a href="#information" class="line fb">More about this visualisation</a></dd>
+        <dd class="line"><a href="#information" class="line fb">Ewfame is the red node</a></dd>
       </dl>
-    </div>
+    </div><!--
 <div id="legend">
 	<div class="box">
 		<h2>Legend:</h2>
@@ -61,7 +61,7 @@
 	<div class="list cf"></div>
       </div>
     </form>
-    </div>
+    </div>-->
   </div>
   <div id="information">
   </div>
